--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <link rel="stylesheet" href="/css/bootstrap.min.css"> 
 
   <link rel="stylesheet" href="stylesheet.css">
-  <title>surver form by freeCodeCamp project</title>
+  <title>survey form by freeCodeCamp project</title>
 </head>
 
 <body>
